...
    showDialog(
      context: context,
      builder: (BuildContext context) {
        return AlertDialog(
          title: const Text("Add Event"),
          content: TextField(
            key: const Key('eventNameField'),
            controller: _eventController,
            decoration: const InputDecoration(labelText: "Event Name"),
          ),
          actions: [
            ElevatedButton(
              key: const Key('addEventButton'),
              onPressed: () {
                final eventName = _eventController.text;
                if (eventName.isNotEmpty) {
                  final event = Event(name: eventName, workouts: []);
                  setState(() {
                    workouts[_selectedDay!] = (workouts[_selectedDay!] ?? [])
...
      builder: (BuildContext context) {
        return AlertDialog(
          title: const Text("Edit Workout"),
          content: Column(
            children: [
              TextField(
                key: const Key('exerciseNameField'),
                controller: _exerciseController,
                decoration: const InputDecoration(labelText: "Exercise"),
              ),
              TextField(
                key: const Key('weightField'),
                controller: _weightController,
                decoration: const InputDecoration(labelText: "Weight (kg)"),
                keyboardType: TextInputType.number,
              ),
              TextField(
                key: const Key('repsField'),
                controller: _repsController,
                decoration: const InputDecoration(labelText: "Repetitions"),
                keyboardType: TextInputType.number,
              ),
              TextField(
                key: const Key('setsField'),
                controller: _setsController,
                decoration: const InputDecoration(labelText: "Sets"),
                keyboardType: TextInputType.number,
              ),
            ],
          ),
          actions: [
            ElevatedButton(
              key: const Key('addWorkoutButton'),
              onPressed: () {
                final updatedWorkout = Workout(
                  exercise: _exerciseController.text,
                  weight: _weightController.text,
                  repetitions: _repsController.text,
                  sets: _setsController.text,
                );

                setState(() async {
                  final index = event.workouts.indexOf(workout);
...
  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        backgroundColor: const Color.fromARGB(255, 85, 85, 85),
        iconTheme: const IconThemeData(color: Colors.white),
        title: const Text("Workouts", style: TextStyle(color: Colors.white)),
        actions: [
          // Move the actions inside AppBar
          IconButton(
            key: const Key('logoutButton'),
            icon: const Icon(Icons.logout),
            onPressed: () => _auth.signOut(context),
          ),
        ],
      ),
      drawer: Drawer(
...
                  context,
                  MaterialPageRoute(builder: (context) => DashboardPage()),
                );
              },
            ),
            ListTile(
              key: const Key('workoutsButton'),
              title: const Text('Workouts'),
              // Corrected onTap method for navigating to the WorkoutsPage
              onTap: () {
                Navigator.push(
                  context,
                  MaterialPageRoute(builder: (context) => const WorkoutsPage()),
                );
              },
            ),
            ListTile(
              key: const Key('calorieButton'),
              title: const Text('Calorie Tracking'),
              // Corrected onTap method for navigating to the WorkoutsPage
              onTap: () {
                Navigator.push(
                  context,
                  MaterialPageRoute(
                      builder: (context) => const CalorieTrackingPage()),
...
              },
            ),
          ],
        ),
      ),
      floatingActionButton: FloatingActionButton(
        key: const Key('addEventFloatingActionButton'),
        onPressed: _showAddEventDialog,
        child: const Icon(Icons.add),
      ),
      body: SingleChildScrollView(
        child: Column(
          children: [
...
              lastDay: DateTime.utc(2030, 3, 14),
              onDaySelected: _onDaySelected,
              eventLoader: _getEventsForDay,
            ),
            const SizedBox(height: 8.0),
            SizedBox(
              height: 300,
              child: ValueListenableBuilder<List<Event>>(
                valueListenable: _selectedEvents,
                builder: (context, events, _) {
                  return ListView.builder(
                    itemCount: events.length,
                    itemBuilder: (context, index) {
...
                                        key: const Key('eventEditIcon'),
                                        icon: const Icon(Icons.edit),
                                        onPressed: () =>
                                            _showEditEventDialog(event),
                                      ),
                                      IconButton(
                                        key: const Key('eventAddIcon'),
                                        icon: const Icon(Icons.add),
                                        onPressed: () =>
                                            _showAddWorkoutDialog(event),
                                      ),
                                      IconButton(
                                        key: const Key('eventDeleteIcon'),
...
