...
                ),
                SizedBox(
                  height: 30,
                ),
                FormContainerWidget(
                  controller: _nameController,
                  key: Key('name'),
                  hintText: "Name",
                  isPasswordField: false,
                ),
                // SizedBox(
                //   height: 10,
                // ),
                // FormContainerWidget(
                //   controller: _phoneNumberController,
                //   key: Key('phoneNumber'),
                //   hintText: "Phone Number",
                //   isPasswordField: false,
                // ),
                // SizedBox(
                //   height: 10,
                // ),
                // FormContainerWidget(
                //   controller: _ageController,
                //   key: Key('age'),
                //   hintText: "Age",
                //   isPasswordField: false,
                // ),
                // SizedBox(
                //   height: 10,
                // ),
                // FormContainerWidget(
                //   controller: _sexController,
                //   key: Key('sex'),
                //   hintText: "Sex",
                //   isPasswordField: false,
                // ),
                // SizedBox(
                //   height: 10,
                // ),
...
                // ),
                // SizedBox(
                //   height: 10,
                // ),
                // FormContainerWidget(
                //   controller: _availabilityController,
                //   key: Key('availability'),
                //   hintText: "Workout availability (within a seven day peroid)",
                //   isPasswordField: false,
                // ),
                SizedBox(
                  height: 30,
                ),
                GestureDetector(
                  key: Key('onboardButton'),
                  onTap: _onboard,
                  child: Container(
                    width: double.infinity,
                    height: 50,
                    decoration: BoxDecoration(
                      color: Color.fromARGB(237, 255, 134, 21),
...
