...
                  style: TextStyle(fontSize: 17, fontWeight: FontWeight.bold),
                ),
                SizedBox(
                  height: 30,
                ),
                FormContainerWidget(
                  fieldKey: Key('emailField'),
                  controller: _emailController,
                  hintText: "Email",
                  isPasswordField: false,
                ),
                SizedBox(
                  height: 10,
                ),
                FormContainerWidget(
                  fieldKey: Key('passwordField'),
                  controller: _passwordController,
                  hintText: "Password",
                  isPasswordField: true,
                ),
                SizedBox(
                  height: 10,
                ),
                FormContainerWidget(
                  fieldKey: Key('confirmPasswordField'),
                  controller: _confirmPasswordController,
                  hintText: "Confirm Password",
                  isPasswordField: true,
                ),
                SizedBox(
                  height: 30,
                ),
                MyButton(
                  fieldKey: Key('signupButton'),
                  text: "Sign Up",
                  onTap: _signUp,
                ),
                SizedBox(
                  height: 20,
                ),
...
